apps/demo/app-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-b
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-b
    spec:
      containers:
      - image: public.ecr.aws/e0f5p9d7/cloudcampla/observability-demo-app:latest
        imagePullPolicy: Always
        name: app-b
        ports:
        - containerPort: 8080
