apps/demo/app-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-b
spec:
  ingressClassName: nginx
  rules:
    - host: app-b.monitoring.devopstech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-b
                port:
                  number: 80
